--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
 			<div class="slides">
 				<section>
-					<h2>Slide 1</h2>
-					Some text
+					<h5>Nanopore sequencing for <em>Mycobacterium tuberculosis</em> drug susceptibility testing and outbreak investigation</h5>
+					<br>
+					Michael Hall $\in$ Iqbal Group @ EMBL-EBI<br>
 				</section>
 				<section>Slide 2</section>
 			</div>
@@ -35,6 +36,7 @@
 		<script src="plugin/notes/notes.js"></script>
 		<script src="plugin/markdown/markdown.js"></script>
 		<script src="plugin/highlight/highlight.js"></script>
+	    <script src="plugin/math/math.js"></script>
 		<script>
 			// More info about initialization & config:
 			// - https://revealjs.com/initialization/
@@ -44,7 +46,7 @@
 				hash: true,
 
 				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
+				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealMath.KaTeX ]
 			});
 		</script>
 	</body>
