add total to table

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
 							<th class="tg-0pky">H</th>
 							<th class="tg-0pky">I</th>
 							<th class="tg-0pky">J</th>
+							<th class="tg-0pky">avg.</th>
 						</tr>
 						</thead>
 						<tbody>
@@ -172,6 +173,7 @@
 							<td class="tg-0pky">0.8</td>
 							<td class="tg-0pky">0.8</td>
 							<td class="tg-0pky">0.0</td>
+							<td class="tg-0pky"><b>0.82</b></td>
 						</tr>
 						<tr>
 							<td class="tg-0pky">precision</td>
@@ -185,6 +187,7 @@
 							<td class="tg-0pky">1.0</td>
 							<td class="tg-0pky">1.0</td>
 							<td class="tg-0pky">0.0</td>
+							<td class="tg-0pky"><b>0.83</b></td>
 						</tr>
 						</tbody>
 					</table></div>
