add link to first page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 				<section>
 					<h5>Nanopore sequencing for <em>Mycobacterium tuberculosis</em> drug susceptibility testing and outbreak investigation</h5>
 					<br>
-					Michael Hall $\in$ Iqbal Group @ EMBL-EBI<br>
+					<p>Michael B. Hall $\in$ Iqbal Group @ EMBL-EBI</p>
+
+					<p><a href="https://mbh.sh/qmrl-slides/">https://mbh.sh/qmrl-slides/</a></p>
 				</section>
 				<section>
 					<p class="fragment fade-in-then-semi-out">Illumina increasingly being used for TB clustering and DST (England, the Netherlands, New York State)</p>
@@ -91,17 +93,17 @@
 				</section>
 				<section>
 					<p>Recall = $\frac{TP}{TP+FN}$ | Precision = $\frac{TP}{TP+FP}$</p>
-					<img width="700" src="imgs/filter-precision-recall.png">
+					<img width="600" src="imgs/filter-precision-recall.png">
 				</section>
 				<section>
 					<h2>SNP distance</h2>
 					<p><code><a href="https://github.com/mbhall88/psdm">psdm</a></code> to generate distance matrix</p>
-					<img width="650" src="imgs/full.dotplot.png">
+					<img width="550" src="imgs/full.dotplot.png">
 				</section>
 				<section>
 					<h2>SNP distance</h2>
 					<p>Isolates within (Illumina) distance of 20 SNPs</p>
-					<img width="650" src="imgs/close.dotplot.png">
+					<img width="550" src="imgs/close.dotplot.png">
 				</section>
 				<section>
 					<h2>Evaluating SNP-based transmission clusters</h2>
@@ -192,6 +194,10 @@
 						</tbody>
 					</table></div>
 					<p>20 Illumina singletons - XCR of $2/20=0.1$.</p>
+				</section>
+				<section>
+					<h4>Selecting Nanopore SNP thresholds</h4>
+					<img width="600" src="imgs/cluster_threshold_sweep.png">
 				</section>
 			</div>
 		</div>
