--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<h5>Nanopore sequencing for <em>Mycobacterium tuberculosis</em> drug susceptibility testing and outbreak investigation</h5>
 					<br>
 					<p>Michael B. Hall $\in$ Iqbal Group @ EMBL-EBI</p>
-
+					<p style="font-family: monospace;font-size: 0.5em"><a href="https://twitter.com/mbhall88">@mbhall88</a> | michael.hall2 [at] unimelb.edu.au</p>
 					<p><a href="https://mbh.sh/qmrl-slides/">https://mbh.sh/qmrl-slides/</a></p>
 				</section>
 				<section>
@@ -423,12 +423,15 @@
 				</section>
 				<section>
 					<h2>Summary</h2>
-					<p class="fragment">Nanopore SNP precision/recall similar to Illumina</p>
-					<p class="fragment">Nanopore clusters do not miss isolates</p>
-					<p class="fragment">Mixing technologies is possible</p>
-					<p class="fragment">Nanopore resistance predictions consistent with Illumina</p>
-					<p class="fragment">Read depth of 30x does not impact resistance predictions</p>
-					<p class="fragment"><a href="https://mbh.sh/qmrl-slides/">https://mbh.sh/qmrl-slides/</a></p>
+					<ul>
+						 <li class="fragment">Nanopore SNP precision/recall similar to Illumina</li>
+						 <li class="fragment">Nanopore clusters do not miss isolates</li>
+						 <li class="fragment">Mixing technologies is possible</li>
+						 <li class="fragment">Nanopore resistance predictions consistent with Illumina</li>
+						 <li class="fragment">Read depth of 30x does not impact resistance predictions</li>
+					</ul>
+					<p><a href="https://mbh.sh/qmrl-slides/">https://mbh.sh/qmrl-slides/</a></p>
+					<p style="font-family: monospace;font-size: 0.5em"><a href="https://twitter.com/mbhall88">@mbhall88</a> | michael.hall2 [at] unimelb.edu.au</p>
 				</section>
 			</div>
 		</div>
